<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/mainxml_background"
    tools:context=".LoginActivity"
    android:padding="20dp">

  <TextView
      android:id="@+id/loginTitle"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginBottom="16dp"
      android:text="@string/LOGINXML_EditText_Title"
      android:textSize="24sp"
      android:textStyle="bold"
      android:textAlignment="center"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintVertical_bias="0.023" />

  <TextView
      android:id="@+id/loginInstructions"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/LOGINXML_ETextView_Help"
      android:textSize="18sp"
      android:textStyle="bold"
      android:textAlignment="center"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.0"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@id/loginTitle"
      app:layout_constraintVertical_bias="0.038" />

  <EditText
      android:id="@+id/emailInput"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginTop="40dp"
      android:background="@drawable/edittext_background"
      android:hint="@string/LOGINXML_EditText_Email"
      android:textStyle="bold"
      android:textAlignment="center"
      android:inputType="textEmailAddress"
      android:padding="12dp"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.0"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@id/loginInstructions" />

  <EditText
      android:id="@+id/passwordInput"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginTop="12dp"
      android:background="@drawable/edittext_background"
      android:hint="@string/LOGINXML_EditText_Password"
      android:textStyle="bold"
      android:textAlignment="center"
      android:inputType="textPassword"
      android:padding="12dp"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.0"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@id/emailInput"
      app:layout_constraintVertical_bias="0.047" />

  <Button
      android:id="@+id/btnLogin"
      android:backgroundTint="@color/teal_700"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:padding="12dp"
      android:text="@string/MAINXML_Login_btn"
      android:textSize="18sp"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.0"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/passwordInput"
      app:layout_constraintVertical_bias="0.07" />

  <TextView
      android:id="@+id/registerInstructions"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/MAINXML_TextView_Register"
      android:textSize="18sp"
      android:textAlignment="center"
      android:textStyle="bold"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.0"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/btnLogin"
      app:layout_constraintVertical_bias="0.242" />

  <Button
      android:id="@+id/btnRegister"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:padding="12dp"
      android:text="@string/MAINXML_Register_btn"
      android:textSize="18sp"
      android:onClick="register"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.0"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/registerInstructions"
      app:layout_constraintVertical_bias="0.125" />

</androidx.constraintlayout.widget.ConstraintLayout>